tdf#149655 Crash: "Helplines while moving" crashes debug-build

regression from
    commit a447b5b6d1114111c92e5e3e3f3ae83d4c2f3bca
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Mon Jun 13 18:46:45 2022 +0200
    loplugin:moveit

calling std::move() on an otl::cow_wrapper apparently leaves it in a
state where calling anything else on it will SIGSEGV.

Change-Id: I00d53a6283f360e3d64c81f5e79075c8ac5a99e8